Bug 780442 - About:Memory page buttons are overlapping, oversized, r=margaret, njn
UltraBlame original commit: 1b8e89614a6c8011a768d04e2d18f4b74762ee9b

--- a/mobile/android/themes/core/aboutMemory.css
+++ b/mobile/android/themes/core/aboutMemory.css
@@ -4,8 +4,6 @@
 
 
 
-
-
 body.verbose {
   
   max-width: 100% !important;
@@ -21,8 +19,14 @@ h2 {
   padding-left: .1em;
 }
 
+
+button {
+  margin: 1%;
+  padding: 2%;
+}
+
 .accuracyWarning {
-  color: #d22;
+  color: #f00;
 }
 
 .badInputWarning {
@@ -56,10 +60,6 @@ h2 {
   cursor: pointer;
 }
 
-.hasKids:hover {
-  text-decoration: underline;
-}
-
 .option {
   font-size: 80%;
   -moz-user-select: none;  
@@ -68,6 +68,10 @@ h2 {
 .legend {
   font-size: 80%;
   -moz-user-select: none;  
+}
+
+.hiddenOnMobile {
+  display: none;
 }
 
 .debug {
